--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
+* {
+  padding: 0%;
+  margin: 0%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+  overflow: hidden;
+}
+h1{
+  font-size: 4rem;
   text-align: center;
+  background-color: antiquewhite;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  font-size: 45px;
+  background-color: black;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  align-items: center;
   color: white;
+  position: relative;
+  height: 5rem;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+li {
+  margin-left: 35px;
+  margin-right:10px;
+  margin-bottom: 15px;
+  list-style: none;
+}
+li :hover{
+color: rgb(212, 212, 212);
+}
+.nav-links {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+.fa-bars,.fa-close {
+  display: none;
+}
+.logo {
+  text-decoration: none;
+  color: white;
+  margin-left: 10px;
+}
+.fa-arrow-down{
+  font-size: 20px;
+  display: inline-block;
+  margin: 10px;
+} 
+@media screen and (max-width:1200px) {
+  ul {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .fa-arrow-down{
+    display: none;
+  }
+  .fa {
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+    font-size: 35px;
+    z-index: 999;
+  }
+  .mobile-navbar {
+    display: block;
+    background-color: rgb(201, 150, 150);
+    position: absolute;
+    width: 60%;
+    height: 100vh;
+    top: 0;
+    text-align: center;
+    right: -800px;
+    transition: all 0.5s ease;
+  }
+  .mobile-navbar.active{
+    right: 0px;
+    transition: all 0.8s ease;
+    z-index: 99;
+  }
+  .nav-items{
+    margin-top: 130px;
+  }
+  li:hover{
+    text-decoration: underline;
+  }
+  .fa-solid{
+    display: none;
   }
 }
